<resources>
    <string name="app_name">NUMAD22Sp_JovianeBellegarde</string>
    <string name="about_me">About Me</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="pressed">Pressed: -</string>
    <string name="pressed_a">Pressed: A</string>
    <string name="pressed_b">Pressed: B</string>
    <string name="pressed_c">Pressed: C</string>
    <string name="pressed_d">Pressed: D</string>
    <string name="pressed_e">Pressed: E</string>
    <string name="pressed_f">Pressed: F</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="joviane_bellegarde">Joviane Bellegarde</string>
    <string name="bellegarde_j_northeastern_edu">bellegarde.j@northeastern.edu</string>
    <string name="link_collector">Link Collector</string>
    <string name="link_name">Link Name</string>
    <string name="link_url">Link Url</string>
    <string name="locationButton">Location</string>
    <string name="get_location">Get Location</string>
    <string name="tap_the_button_to_get_current_location">Tap the button to get current location.</string>
    <string name="latitude_textview">LatitudeTextView</string>
    <string name="longitude_textview">LongitudeTextView</string>
    <string name="at_your_service">At Your Service</string>
    <string name="search_hairstyles">Get Data</string>
    <string name="search_hairstyle">Search Hairstyle</string>
    <string name="enter_hairstyle">Enter Hairstyle</string>
</resources>