<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/mainActivityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!"
            android:textAllCaps="false"
            android:textColor="#E91E63"
            android:textSize="60sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.095"
            app:layout_constraintBottom_toTopOf="@+id/linkCollectorButton" />

    <Button
            android:id="@+id/aboutMeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="helloWorldActivity"
            android:text="@string/about_me"
            app:iconTint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.938"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
            android:id="@+id/clickyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sixButtonsActivity"
            android:text="@string/clicky_clicky"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.516"
            app:layout_constraintTop_toBottomOf="@+id/linkCollectorButton"
            app:layout_constraintBottom_toTopOf="@+id/button2" />

    <Button
            android:id="@+id/linkCollectorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_collector"
            android:onClick="linkListActivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="OnClick"
            app:layout_constraintVertical_bias="0.423"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/mainActivityTextView"
            app:layout_constraintBottom_toTopOf="@+id/clickyButton" />

    <Button
            android:text="@string/locationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="locationActivity"
            android:id="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.614"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/clickyButton"
            app:layout_constraintBottom_toTopOf="@+id/aboutMeButton" />

</androidx.constraintlayout.widget.ConstraintLayout>